; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_mover.c_SP_func_lua_mover.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_mover.c_SP_func_lua_mover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (%struct.TYPE_6__*, %struct.TYPE_6__*, %struct.TYPE_6__*)*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SP_func_lua_mover(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store i32 (%struct.TYPE_6__*, %struct.TYPE_6__*, %struct.TYPE_6__*)* @Use_LuaMover, i32 (%struct.TYPE_6__*, %struct.TYPE_6__*, %struct.TYPE_6__*)** %9, align 8
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %14 = call i32 @Use_LuaMover(%struct.TYPE_6__* %11, %struct.TYPE_6__* %12, %struct.TYPE_6__* %13)
  br label %15

15:                                               ; preds = %10, %7
  ret void
}

declare dso_local i32 @Use_LuaMover(%struct.TYPE_6__*, %struct.TYPE_6__*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
